# watchagent

./: .gitignore  CONTRIBUTING.md  LAUNCH.md  LICENSE  PRODUCTION.md  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: main_watchagent-license.yml  publish.yml
dashboard-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard-ui/src/: App.jsx  api.js  styles.css
dashboard-ui/src/components/: JsonBlock.jsx  StatsBar.jsx  StatusBadge.jsx
dashboard-ui/src/pages/: RunDetailPage.jsx  RunsPage.jsx
license-server/: .env.example  Dockerfile  README.md  app.py  railway.json  requirements.txt
watchagent/: __init__.py  alerts.py  cli.py  config.py  dashboard_api.py  decorator.py  license.py  live.py  logger.py  models.py  serve.py  storage.py
watchagent-web/: .env.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
watchagent-web/app/: globals.css  layout.jsx  page.jsx
watchagent-web/components/: InstallCommand.jsx  SectionReveal.jsx
