[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "watchagent"
version = "0.1.0"
description = "Debugger and monitor for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "watchagent contributors" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "anthropic>=0.40.0",
  "click>=8.1.8",
  "rich>=13.9.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0"
]

[project.urls]
Homepage = "https://watchagent.dev"
Documentation = "https://docs.watchagent.dev"
Repository = "https://github.com/watchagent/watchagent"
Issues = "https://github.com/watchagent/watchagent/issues"

[project.scripts]
watchagent = "watchagent.cli:main"
